--- a/lib/src/main/res/values/color.xml
+++ b/lib/src/main/res/values/color.xml
@@ -1,28 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- 圆形指示器的颜色-->
-    <color name="color_indicator_bg">#40939191</color>
-    <color name="color_indicator_selected_bg">#e6ffffff</color>
-    <color name="color_button_bg">#97f25b</color>
-    <color name="color_button_bg_dark">#7fd745</color>
-    <color name="color_tab">#f4ebbd</color>
+    <color name="loop_color_indicator_bg">#40939191</color>
+    <color name="loop_color_indicator_selected_bg">#e6ffffff</color>
+    <color name="loop_color_button_bg">#97f25b</color>
+    <color name="loop_color_button_bg_dark">#7fd745</color>
+    <color name="loop_color_tab">#f4ebbd</color>
 
-    <color name="color_trans">#20ffffff</color>
-    <color name="color_trans_real">#00ffffff</color>
-    <color name="color_trans_press">#3bdcdada</color>
-    <color name="color_black">#d6000000</color>
-    <color name="color_blue">#fa254ed4</color>
+    <color name="loop_color_trans">#20ffffff</color>
+    <color name="loop_color_trans_real">#00ffffff</color>
+    <color name="loop_color_trans_press">#3bdcdada</color>
+    <color name="loop_color_black">#d6000000</color>
+    <color name="loop_color_blue">#fa254ed4</color>
 
 
-    <color name="colorWhite">#fff</color>
-    <color name="colorSimpleWhite">#e2e1e1</color>
-    <color name="colorYelloWhite">#fffefa</color>
-    <color name="colorTrans">#00ffffff</color>
-    <color name="colorBlack">#262525</color>
-    <color name="colorSimpleLine">#d2d1d1</color>
-    <color name="colorLightDark">#8b8a8a</color>
-    <color name="colorTransDark">#b78b8a8a</color>
-    <color name="colorDrawerBG">#dcea6952</color>
-    <color name="colorDrawerHeadBG">#cde68c65</color>
-    <color name="colorTransDeepDark">#b7535353</color>
 </resources>
